--- a/docs/训练营作业介绍.md
+++ b/docs/训练营作业介绍.md
@@ -1,6 +1,6 @@
 # 本地自测
 
-1. 拉取代码仓库 ``git clone git@github.com:InfiniTensor/TinyInfiniTrain.git``
+1. 拉取代码仓库 ``git clone git@github.com:InfiniTensor/TinyInfiniTrain.git --recursive``
 
 2. 进入代码目录``cd TinyInfiniTrain``
 
