根据反馈修复代码问题；新增作业提示

--- a/docs/训练营作业介绍.md
+++ b/docs/训练营作业介绍.md
@@ -1,3 +1,9 @@
+# 特别提示
+
+1. 如果大家在作业项目开发过程中发现项目本身的问题，不要修改用例代码，请及时反馈给助教。
+
+2. 建议大家尽量独立完成作业，完成用例的同时做到"最小化修改"，原则上在作业要求注释的位置开发即可。另外，作业报告内可以写下对代码实现的理解、算法或者系统的示意图以及开发过程中的问题记录，形式不限。
+
 # 本地自测
 
 1. 拉取代码仓库 ``git clone git@github.com:InfiniTensor/TinyInfiniTrain.git --recursive``
